# cascade

./: .gitignore  AGENTS.md  DEBUGGING_STATUS.md  README.md  bug-reproduce.sh  debug_spike.py  notes  pyproject.toml  reduce_bugs.py  reproduce_bug.py
cascade/: __init__.py  config.py  fuzzer.py
cascade/execution/: __init__.py  elf_writer.py  iss_runner.py  rtl_runner.py
cascade/generator/: __init__.py  basic_block.py  intermediate.py  memory_manager.py  register_fsm.py  ultimate.py
cascade/isa/: __init__.py  csrs.py  encoding.py  extensions.py  instructions.py
cascade/reduction/: __init__.py  head_finder.py  reducer.py  tail_finder.py
docs/: MACOS_PORT_INSTRUCTIONS.md
scripts/: setup_deps.sh
scripts/patches/kronos/: 0001-verilator-build-macos.patch  0002-kronos-compliance-rootp.patch  0003-retire-pc-trace.patch
tests/: __init__.py  test_cli_integration.py  test_encoding.py  test_generation.py  test_iss_timeout_reporting.py  test_memory_manager.py  test_reduction.py  test_register_fsm.py  test_rtl_integration.py  test_rtl_runner.py  test_seed_collision.py  test_trace_outputs.py
